--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -78,7 +78,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>Rozbalit aktu&aacute;ln&iacute;</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; se zobraz&iacute; rozbalen&eacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Rozbalit automaticky</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; rozbalen&eacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Automaticky sbalit</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
-<ul><li><b>Show Hidden</b>: if active, hidden Data and View properties are shown.</li></ul>
+<ul><li><b>Zobrazit skryt&eacute;</b>: pokud je aktivn&iacute;, zobraz&iacute; se skryt&eacute; vlastnosti Data a Pohled.</li></ul>
 <p>When right-clicking a property the following additional options are available:
 </p>
 <ul><li><b>Copy</b>: copies the property value to the clipboard.</li></ul>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201055
+Cached time: 20260122201157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.155 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.415 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32465/2097152 bytes
-Template argument size: 12608/2097152 bytes
+Post&#8208;expand include size: 32470/2097152 bytes
+Template argument size: 12613/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.399      1 -total
- 20.99%    9.110      1 Template:Std_Base_navi/cs
- 14.11%    6.122      3 Template:Navigation_menu_2
- 13.81%    5.995      1 Template:Userdocnavi/cs
- 12.98%    5.634      1 Template:Interface_navi/cs
-  9.17%    3.978      1 Template:PropertyData
-  6.15%    2.669      2 Template:Value
-  5.13%    2.228      2 Template:Docnav
-  5.13%    2.226      1 Template:Code
-  4.74%    2.055      1 Template:Caption
+100.00%  108.176      1 -total
+ 26.04%   28.171      1 Template:Std_Base_navi/cs
+ 20.10%   21.744      3 Template:Navigation_menu_2
+ 10.89%   11.777      1 Template:Interface_navi/cs
+  9.59%   10.370      1 Template:PropertyData
+  9.48%   10.259      1 Template:Userdocnavi/cs
+  6.68%    7.229     26 Template:MenuCommand
+  6.00%    6.489      2 Template:Docnav
+  4.37%    4.732      1 Template:Variable
+  4.24%    4.588      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201055 and revision id 1742688. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201157 and revision id 1742690. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
