--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -12,7 +12,7 @@
 <li><a href="../pt-br/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriedades (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriet&#259;&#539;i (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; (8% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -81,7 +81,7 @@ App::PropertyVector
 <ul><li><b>Zobrazit skryt&eacute;</b>: pokud je aktivn&iacute;, zobraz&iacute; se skryt&eacute; vlastnosti Data a Pohled.</li></ul>
 <p>Po kliknut&iacute; prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na vlastnost se zobraz&iacute; n&aacute;sleduj&iacute;c&iacute; dal&scaron;&iacute; mo&#382;nosti:
 </p>
-<ul><li><b>Copy</b>: copies the property value to the clipboard.</li></ul>
+<ul><li><b>Kop&iacute;rovat</b>: zkop&iacute;ruje hodnotu vlastnosti do schr&aacute;nky.</li></ul>
 <ul><li><b>Rename Property Group</b>: renames the property group of selected properties. Only available for dynamic properties. Dynamic properties are those added by the user.</li></ul>
 <ul><li><b>Rename Property</b>: renames the selected property. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <ul><li><b>Edit Property Tooltip</b>: edits the tooltip of the selected property. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
@@ -173,35 +173,35 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201242
+Cached time: 20260122201315
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.236 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.232 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32470/2097152 bytes
-Template argument size: 12613/2097152 bytes
+Post&#8208;expand include size: 32476/2097152 bytes
+Template argument size: 12619/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3983/5000000 bytes
+Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.758      1 -total
- 13.78%   10.162      1 Template:Std_Base_navi/cs
- 12.72%    9.383      1 Template:Userdocnavi/cs
- 11.65%    8.594      1 Template:Interface_navi/cs
- 10.67%    7.871      2 Template:Value
-  9.47%    6.986      3 Template:Navigation_menu_2
-  8.04%    5.930      2 Template:Docnav
-  7.73%    5.700      1 Template:PropertyData
-  7.31%    5.391      1 Template:Code
-  5.35%    3.949     26 Template:MenuCommand
+100.00%   65.274      1 -total
+ 21.14%   13.799      1 Template:Interface_navi/cs
+ 20.66%   13.486      1 Template:Std_Base_navi/cs
+ 13.74%    8.969      3 Template:Navigation_menu_2
+ 11.71%    7.642      1 Template:Userdocnavi/cs
+  9.73%    6.350      1 Template:PropertyData
+  5.40%    3.527      2 Template:Value
+  4.99%    3.258      1 Template:Variable
+  4.33%    2.827      1 Template:Code
+  3.89%    2.541      1 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201242 and revision id 1742692. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201315 and revision id 1742694. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
