--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -84,7 +84,7 @@ App::PropertyVector
 <ul><li><b>Kop&iacute;rovat</b>: zkop&iacute;ruje hodnotu vlastnosti do schr&aacute;nky.</li></ul>
 <ul><li><b>P&#345;ejmenovat skupinu vlastnost&iacute;</b>: p&#345;ejmenuje skupinu vybran&yacute;ch vlastnost&iacute;. K dispozici pouze pro dynamick&eacute; vlastnosti. Dynamick&eacute; vlastnosti jsou vlastnosti p&#345;idan&eacute; u&#382;ivatelem.</li></ul>
 <ul><li><b>P&#345;ejmenovat vlastnost</b>: p&#345;ejmenuje vybranou vlastnost. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
-<ul><li><b>Edit Property Tooltip</b>: edits the tooltip of the selected property. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
+<ul><li><b>Upravit n&aacute;pov&#283;du k vlastnosti</b>: &uacute;prav&iacute; n&aacute;strojovou n&aacute;pov&#283;du vybran&eacute; vlastnosti. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <ul><li><b>Delete Property</b>: deletes selected properties. Idem.</li></ul>
 <ul><li><b>Expression</b>: brings up the Expression Editor, which allows using <a href="../Expressions.html" title="Expressions">expressions</a> in the property value.</li></ul>
 <ul><li><b>Status</b>:</li></ul>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201457
+Cached time: 20260122201616
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.481 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.251 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32494/2097152 bytes
-Template argument size: 12637/2097152 bytes
+Post&#8208;expand include size: 32504/2097152 bytes
+Template argument size: 12647/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.296      1 -total
- 20.12%   25.612      3 Template:Navigation_menu_2
- 18.57%   23.643      1 Template:Std_Base_navi/cs
- 16.14%   20.541      1 Template:Interface_navi/cs
- 10.21%   13.001      1 Template:Userdocnavi/cs
-  7.64%    9.724      1 Template:PropertyData
-  6.97%    8.873     26 Template:MenuCommand
-  5.91%    7.523      2 Template:Docnav
-  4.88%    6.209      6 Template:Incode
-  4.66%    5.935      1 Template:Code
+100.00%   84.256      1 -total
+ 15.47%   13.034      1 Template:Std_Base_navi/cs
+ 14.24%   11.994      3 Template:Navigation_menu_2
+ 13.76%   11.590      1 Template:Userdocnavi/cs
+ 13.29%   11.197      1 Template:Interface_navi/cs
+ 13.19%   11.116      1 Template:PropertyData
+  6.90%    5.811      2 Template:Value
+  6.80%    5.728      1 Template:Code
+  6.56%    5.528      1 Template:Variable
+  6.11%    5.144     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201457 and revision id 1742698. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201616 and revision id 1742700. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
