--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -86,7 +86,7 @@ App::PropertyVector
 <ul><li><b>P&#345;ejmenovat vlastnost</b>: p&#345;ejmenuje vybranou vlastnost. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <ul><li><b>Upravit n&aacute;pov&#283;du k vlastnosti</b>: &uacute;prav&iacute; n&aacute;strojovou n&aacute;pov&#283;du vybran&eacute; vlastnosti. Idem. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <ul><li><b>Odstranit vlastnost</b>: odstran&iacute; vybran&eacute; vlastnosti. Idem.</li></ul>
-<ul><li><b>Expression</b>: brings up the Expression Editor, which allows using <a href="../Expressions.html" title="Expressions">expressions</a> in the property value.</li></ul>
+<ul><li><b>V&yacute;raz</b>: otev&#345;e Editor v&yacute;raz&#367;, kter&yacute; umo&#382;&#328;uje pou&#382;&iacute;vat <a href="../Expressions.html" title="Expressions">v&yacute;razy</a> v hodnot&#283; vlastnosti.</li></ul>
 <ul><li><b>Status</b>:</li></ul>
 <dl><dd>If a status value is followed by an asterisk (<b>*</b>) it is static and cannot be changed.</dd></dl>
 <dl><dd><ul><li><b>Hidden</b>: if active, sets the property as hidden, meaning that it will only be displayed in the Property View if <b>Show Hidden</b> is active.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201653
+Cached time: 20260122201743
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.626 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.198 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32508/2097152 bytes
-Template argument size: 12651/2097152 bytes
+Post&#8208;expand include size: 32504/2097152 bytes
+Template argument size: 12647/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  194.489      1 -total
- 24.55%   47.745      1 Template:Std_Base_navi/cs
- 23.51%   45.731      3 Template:Navigation_menu_2
- 15.09%   29.341      1 Template:Userdocnavi/cs
- 10.97%   21.337      1 Template:Interface_navi/cs
-  6.32%   12.292      1 Template:PropertyData
-  6.28%   12.205     26 Template:MenuCommand
-  5.35%   10.403      2 Template:Docnav
-  4.42%    8.590      1 Template:Code
-  3.86%    7.507      6 Template:Incode
+100.00%   53.021      1 -total
+ 16.96%    8.994      1 Template:Std_Base_navi/cs
+ 14.11%    7.479      1 Template:Interface_navi/cs
+ 13.94%    7.392      3 Template:Navigation_menu_2
+ 13.64%    7.232      1 Template:Userdocnavi/cs
+  9.36%    4.963      1 Template:PropertyData
+  6.86%    3.635     26 Template:MenuCommand
+  5.96%    3.158      1 Template:Variable
+  5.52%    2.928      3 Template:Version
+  5.40%    2.864      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201652 and revision id 1742702. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201742 and revision id 1742704. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
