--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201743
+Cached time: 20260122201752
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.443 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32504/2097152 bytes
 Template argument size: 12647/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.021      1 -total
- 16.96%    8.994      1 Template:Std_Base_navi/cs
- 14.11%    7.479      1 Template:Interface_navi/cs
- 13.94%    7.392      3 Template:Navigation_menu_2
- 13.64%    7.232      1 Template:Userdocnavi/cs
-  9.36%    4.963      1 Template:PropertyData
-  6.86%    3.635     26 Template:MenuCommand
-  5.96%    3.158      1 Template:Variable
-  5.52%    2.928      3 Template:Version
-  5.40%    2.864      2 Template:Value
+100.00%  193.210      1 -total
+ 21.02%   40.615      3 Template:Navigation_menu_2
+ 20.92%   40.425      1 Template:Interface_navi/cs
+ 19.71%   38.076      1 Template:Std_Base_navi/cs
+ 10.56%   20.403      2 Template:Docnav
+ 10.41%   20.116      1 Template:PropertyData
+  8.71%   16.826      1 Template:Caption
+  6.02%   11.629      6 Template:Incode
+  5.71%   11.024      1 Template:Userdocnavi/cs
+  4.98%    9.623      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201742 and revision id 1742704. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201752 and revision id 1742704. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
