--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -93,7 +93,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>V&yacute;stup</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako v&yacute;stup.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Bez p&#345;epo&#269;&iacute;t&aacute;n&iacute;</b>: pokud je aktivn&iacute;, zm&#283;na vlastnosti neovlivn&iacute; jej&iacute; kontejner pro p&#345;epo&#269;&iacute;t&aacute;n&iacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Pouze pro &#269;ten&iacute;</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako pouze pro &#269;ten&iacute;. Vlastnost nebude mo&#382;n&eacute; upravovat v zobrazen&iacute; vlastnost&iacute;. St&aacute;le v&scaron;ak m&#367;&#382;e b&yacute;t mo&#382;n&eacute; vlastnost zm&#283;nit prost&#345;ednictv&iacute;m dialogov&eacute;ho okna.</li></ul></dd></dl>
-<dl><dd><ul><li><b>Transient</b>: if active, sets the property as transient. The value of a transient property is not saved to file. When opening a file, it is instantiated with its default value.</li></ul></dd></dl>
+<dl><dd><ul><li><b>P&#345;echodn&aacute;</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako p&#345;echodnou. Hodnota p&#345;echodn&eacute; vlastnosti se neukl&aacute;d&aacute; do souboru. P&#345;i otev&#345;en&iacute; souboru se na&#269;te jej&iacute; v&yacute;choz&iacute; hodnota.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Touched</b>: if active, the object becomes touched, and ready for recompute.</li></ul></dd></dl>
 <dl><dd><ul><li><b>EvalOnRestore</b>: if active, the property is evaluated when the document is restored.</li></ul></dd></dl>
 <dl><dd><ul><li><b>CopyOnChange</b>: if active, the property is copied when changed in a Link. The Link's <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Link Copy On Change</b> property must be set to <code>Tracking</code> or <code>Enabled</code> for this to work. This is related to <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=738833#p738833">Variant Links</a>.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122202153
+Cached time: 20260122202304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.160 seconds
-Real time usage: 0.274 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.342 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32529/2097152 bytes
-Template argument size: 12672/2097152 bytes
+Post&#8208;expand include size: 32531/2097152 bytes
+Template argument size: 12674/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   93.426      1 -total
- 20.18%   18.854      1 Template:Std_Base_navi/cs
- 18.00%   16.814      1 Template:PropertyData
- 13.06%   12.199      1 Template:Interface_navi/cs
- 12.38%   11.562      2 Template:Value
- 11.10%   10.368      3 Template:Navigation_menu_2
-  6.07%    5.670      1 Template:Userdocnavi/cs
-  4.95%    4.623      1 Template:Code
-  4.58%    4.279      1 Template:Variable
-  3.91%    3.652      6 Template:Incode
+100.00%   64.032      1 -total
+ 17.50%   11.207      1 Template:Std_Base_navi/cs
+ 14.73%    9.430      1 Template:Interface_navi/cs
+ 13.56%    8.682      3 Template:Navigation_menu_2
+ 12.57%    8.047      1 Template:PropertyData
+  9.44%    6.047      1 Template:Userdocnavi/cs
+  7.41%    4.745      2 Template:Value
+  6.50%    4.165      1 Template:Variable
+  4.93%    3.159     26 Template:MenuCommand
+  4.01%    2.570      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202152 and revision id 1742715. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202303 and revision id 1742717. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
